--- a/website/assets/styles.css
+++ b/website/assets/styles.css
@@ -13,6 +13,7 @@ html, body {
     min-height: 100vh;
 }
 
+/* header and footer in body but outside of main */
 header, footer {
     background: #333;
     color: white;
@@ -21,6 +22,13 @@ header, footer {
     text-align: center;
 }
 
+/* Make Heading of all sites to stay white, even though it is a link */
+h1 a {
+    color: white;
+    text-decoration: none;
+}
+
+/* Menu items in navbar styled */
 nav a {
     display: inline-block;
     color: white;
