--- a/website/content/projects/cafemenu/styles.css
+++ b/website/content/projects/cafemenu/styles.css
@@ -1,3 +1,10 @@
+/* Insert if the scrollbar appears */
+/* html, body {
+  margin: 0;
+  padding: 0;
+  height: auto;
+} */
+
 body {
   /* Use a background image for the body element instead of a simple color. */
   background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
