--- a/website/assets/styles.css
+++ b/website/assets/styles.css
@@ -2,8 +2,9 @@
 html, body {
     font-family: Arial, sans-serif;
     height: 100%;
-    margin: 0;
+    margin: 0 auto; /* Center page horizontalle */
     padding: 0;
+    max-width: 1080px; /* Too wide of a page destroys the layout */
 }
 
 /* Wrapper around body elements with full viewport height to push footer down */
