--- a/website/assets/styles.css
+++ b/website/assets/styles.css
@@ -104,6 +104,40 @@ main {
     scrollbar-color: #888 #2d2d2d;
 }
 
+/* BLOG POSTS */
+/* COMMENTS */
+
+/* Style the username input */
+#username-modal {
+    display:none; 
+    position:fixed; 
+    top:0; 
+    left:0; 
+    width:100%; 
+    height:100%; 
+    background:rgba(0,0,0,0.5); 
+    align-items:center; 
+    justify-content:center; 
+    z-index:1000;
+}
+
+#username-prompt {
+    background:white; 
+    padding:20px; 
+    border-radius:8px; 
+    max-width:300px; 
+    width:100%;
+}
+
+input#username-input {
+    width:100%;
+}
+
+#username-buttons {
+    margin-top:10px; 
+    text-align:right;
+}
+
 /* PROJECTS */
 /* Container (like div) where a auto-resized iframe is inside. */
 .responsive-iframe-container {
