--- a/website/assets/styles.css
+++ b/website/assets/styles.css
@@ -1,7 +1,7 @@
 /* Make html and body take up whole website */
 html, body {
-    font-family: Arial, sans-serif;
-    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.2rem;
     height: 100%;
     margin: 0 auto; /* Center page horizontally */
     padding: 0;
