--- a/website/assets/styles.css
+++ b/website/assets/styles.css
@@ -68,6 +68,33 @@ main {
     background-color: white;
 }
 
+/* FOOTER */
+footer {
+  text-align: center;
+  padding: 1rem 0;
+}
+
+/* Icons in footer to refer to socials */
+.footer-icons {
+  display: flex;
+  justify-content: center;
+  gap: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+/* Links of footer icons */
+.footer-icons a {
+  color: white; 
+  font-size: 1.5rem;
+  transition: color 0.3s;
+}
+
+/* Highlight on hover */
+.footer-icons a:hover {
+  color: #0077cc; 
+}
+
+
 /* For screens 600px wide or smaller */
 @media (max-width: 600px) {
 
