--- a/website/includes/layout/media-box.css
+++ b/website/includes/layout/media-box.css
@@ -19,6 +19,8 @@
   text-align: justify;
   font-size: 1.5rem;
   flex: 1;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
 }
 
 .media-image-wrapper {
